# rustflare

./: .gitignore  Cargo.toml
examples/dioxus_example/: Cargo.toml  Dioxus.toml
examples/dioxus_example/public/: tailwind.css
examples/dioxus_example/src/: main.rs
examples/yew_example/: Cargo.toml  index.html  tailwind.config.js
examples/yew_example/src/: main.rs
examples/yew_example/styles/: output.css
rustflare/: Cargo.toml
rustflare/src/: lib.rs
rustflare/src/components/: button.rs  mod.rs
rustflare/src/components/button/: button.rs  button_size.rs  button_variant.rs  mod.rs
rustflare/src/core/: button.rs
rustflare/src/dioxus_adapter/: button.rs
rustflare/src/yew_adapter/: button.rs
src/: lib.rs
src/core/: button.rs  mod.rs
src/dioxus_adapter/: button.rs  mod.rs
src/yew_adapter/: button.rs  mod.rs
