[package]
name = "rustflare"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
dioxus = { workspace = true, optional = true }
yew = { workspace = true, optional = true }

[features]
default = []
yew = ["dep:yew"]
dioxus = ["dep:dioxus"]
mutually_exclusive = ["dioxus", "yew"]