[package]
name = "dioxus_example"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
rustflare = { path = "../../rustflare", features = ["dioxus"]}
dioxus = { workspace = true, features = ["web", "router"] }
# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
web-sys = "0.3.70"
